--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "ghist-addresses"
-version = "0.1.0"
+version = "0.0.3"
 edition = "2021"
 
 [dependencies]
-cosmwasm-std = "2.0.0-rc.1"
-
-# cosmwasm-std = "1.5.3"
-# cw-multi-test = "0.20.0"
+cosmwasm-std = "1.2.8"
+cw-multi-test = { version = "0.20.0", features = ["cosmwasm_1_2"] }
